platform/manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
---
apiVersion: v1
kind: Namespace
metadata:
  name: logistics
  labels:
    pod-security.kubernetes.io/enforce: baseline
